--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Ebrahim Rhode <1ebrahimr@gmail.com>
+Method Mkoma <please@insert.email>
